k8s-related/ingress-lessons/basic/nginx-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx-app
          image: nginx:trixie
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
