k8s-related/ingress-lessons/basic/path-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-based-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx-demo-k8s.piseth.dev
      # - reactjs-demo-k8s.piseth.dev
      secretName: nginx-k8s-tls
  rules:
    - host: nginx-demo-k8s.piseth.dev
      http:
        paths:
          - pathType: Prefix
            path: "/nginx"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: earthdx-svc
                port:
                  number: 80
